Fix z-index issue

--- a/styles/pages/forum-new.less
+++ b/styles/pages/forum-new.less
@@ -399,6 +399,9 @@ main.forum {
         max-height: 28px;
         overflow: scroll;
       }
+      .dropdown-select__menu {
+        z-index: 10;
+      }
     }
 
     .btn-group {
